# simple-http-file-server

./: .gitignore  Cargo.toml  README.md  build.ps1  cspell.json  rust-toolchain.toml  simple-http-file-server.code-workspace
.github/workflows/: release.yml  test-release.yml
goserver/: .env  .gitignore  .goreleaser.yaml  config.yaml  ghs.yaml  go.mod  go.sum  main.go  newtag.ps1  policy.csv  scripts.json
goserver/api/: audio.go  filelist.go  index.go  server.go  user.go  video.go
goserver/cmd/: root.go
goserver/conf/: config.yaml  embed.go  policy.csv  rabc_modal.conf
goserver/config/: config.go  jwt.go  security.go  user.go  webPermission.go  zap.go
goserver/docs/: docs.go  swagger.json  swagger.yaml
goserver/error/: error.go
goserver/global/: global.go  validate.go
goserver/middleware/: IPLimit.go  auth.go  casbin.go  cors.go  logger.go
goserver/modal/: filelist.go
goserver/restclient/: files.http  goproxy.http  server.http  user.http
goserver/router/: index.go  router.go
goserver/server/: ghs.yaml  server.go
goserver/sysinfo/: sysinfo.go
goserver/util/: bytes.go  cmd.go  fs.go  jwt.go  net.go  regex.go  strconv.go  zap.go  zip.go
goserver/version/: version.go
server/: Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs
server/src/global/: mod.rs
server/src/router/: mod.rs
server/src/util/: mod.rs  resp.rs
web/: .commitlintrc.cjs  .env  .prettierrc.cjs  biome.json  cspell.json  index.html  package.json  parser-preset.cjs  pnpm-lock.yaml  rome.json  tsconfig.json  vite.config.ts
web/.husky/: commit-msg
(+78 files in other folders)
